opam-version: "1.2"
name: "pipes"
version: "dev"
maintainer: "Philippe Veber <philippe.veber@gmail.com>"
authors: "Philippe Veber <philippe.veber@gmail.com>"
homepage: "https://github.com/pveber/pipes"
bug-reports: "https://github.com/pveber/pipes/issues"
license: "GPL3"
dev-repo: "https://github.com/pveber/pipes.git"

build: ["jbuilder" "build" "-p" name "-j" jobs]

depends: [
  "ocamlfind" {build}
  "core_kernel"
]

depopts: [
  "async"
  "cfstream"
  "core_bench"
  "lwt"
  "ounit"
]
